# AtlasDataAnalysis

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
source/: conf.py  index.rst
src/neural_networks/: first_neural_network.py
src/neural_networks/demos/: cloths_reconizer.py  sequence_solver.py
tests/: test_first_neural_network.py
tests/test_neural_networks/demos/: test_sequence_solver.py
