[metadata]
name = AtlasDataAnalysis
version = 0.0.1
description = Code wrote douring my internship at INFN Trieste carried out together with the ATLAS research team.
author = Denis Cristian Pal
author_email = deniscristian.pal@studenti.units.it
url = https://github.com/R3sten/AtlasDataAnalysis
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13


[options]
packages = find:
install_requires =
    tensorflow
    keras
python_requires = >=3.10
zip_safe = no
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    sphinx

[options.package_data]
neural_networks = py.typed

[flake8]
max-line-length = 160